# transcriber

./: .gitignore  README.md  app.py  celery_app.py  celery_tasks.py  convert_audio.py  nohup.out  pyproject.toml  rq_tasks.py  setup.py  test.py  transcriber.py  worker_spwn.py
faster_whisper.egg-info/: PKG-INFO  SOURCES.txt
