[project]
name = "transcriber"
version = "0.1.0"
description = ""
authors = [
    {name = "geniality"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "redis (>=6.2.0,<7.0.0)",
    "ctranslate2 (>=4.0,<5)",
    "huggingface_hub (>=0.13)",
    "tokenizers (>=0.13,<1)",
    "av (>=11)",
    "tqdm (>=4.65,<5)",
    "onnxruntime (>=1.22.0,<2.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "rq (>=2.3.3,<3.0.0)",
    "rq-dashboard (>=0.8.3.2,<0.9.0.0)",
    "yt-dlp[default] (>=2025.5.22,<2026.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",   
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
